Fixed Patch Package

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "postinstall": "npx patch-package @react-google-maps/api || true"
+    "postinstall": "npx patch-package @react-google-maps/api"
 
   },
   "dependencies": {
